--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,15 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.13.0-rc2</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.24</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.23</version>
+        </dependency>
     </dependencies>
 </project>
